# slate

./: .gitignore  .gitmodules  Makefile  buffer.cpp  main.cpp  ui.hpp
api/: api.lua  buffer.lua  mode.lua  slate.lua
src/: API.cpp  API.hpp  Buffer.cpp  Buffer.hpp  Cursor.cpp  Cursor.hpp  Makefile  Slate.cpp  SlateBuffer.cpp  SlateBuffer.hpp  SlateWindow.cpp  SlateWindow.hpp  Window.cpp  Window.hpp  main.cpp  window.css
testing-qt/: CMakeLists.txt  README.md  main.cpp
testing-qt/src/: Buffer.cpp  Buffer.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
